# mlx-master-trainer

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  USAGE.md  decisions.md  run.sh
backend/: app_entry.py  server.py
core/: __init__.py  adapters.py  common.py  data.py  data_quality.py  eval.py  eval_quality.py  filter.py  gate.py  models.py  prereg.py  projects.py  run_eval.py  run_semantic.py  run_train.py  semantic.py  train.py
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
frontend/: index.html
reports/: frozen_keystone.json  keystone_result.json  opensource_release_complete.md  phase1_complete.md  phase2_complete.md  phase2_keystone.json  phase3_complete.md  phase3_keystone.json  semantic_keystone.json  semantic_upgrade_complete.md
scripts/: keystone.py  keystone_frozen.py  keystone_p2.py  keystone_p3.py  keystone_semantic.py  make_icons.py
